objects/Case.object
<CustomObject><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthélemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Netherlands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Enquirer__c</fullName>
        <description>Temporary field prior to fixing Web Name not populating in Web2case</description>
        <formula>IF ( ISBLANK (ContactId), 
   IF ( ISBLANK ( SuppliedName ),
      First_Name__c  &amp; " " &amp;  Last_Name__c ,
      SuppliedName
   ),
   Contact.FirstName &amp; " " &amp;  Contact.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquirer</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Enquiry_Type__c</fullName>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Directors Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>How_did_you_hear_about_LSTM__c</fullName>
        <label>How did you hear about LSTM</label>
        <picklist>
            <picklistValues>
                <fullName>LSTM Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Search Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Careers Fair/Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEC Abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Keep_me_informed_about_this_LSTM_news__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep me informed about this LSTM news</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Keep_me_informed_about_this_course__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Keep me informed about this course</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Nature_of_Enquiry__c</fullName>
        <label>Nature of Enquiry</label>
        <picklist>
            <picklistValues>
                <fullName>Course Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees &amp; Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa &amp; Immigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Version_Name__c</fullName>
        <label>Programme Version Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme Version</label>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme</label>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Student_Enquiry_Type__c</fullName>
        <label>Student Enquiry Type</label>
        <picklist>
            <controllingField>Enquiry_Type__c</controllingField>
            <picklistValues>
                <fullName>General Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Degrees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Courses Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Courses/Professional Diplomas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters Degrees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Programme</label>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <formula>If ( Text( Contact.Test_Record__c ) = "Yes", True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Web_Subject__c</fullName>
        <description>To allow Programme Version Code to be added to Enquiry Subject</description>
        <label>Web Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>programme_Name__c</fullName>
        <label>programme Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><sharingModel>ReadWriteTransfer</sharingModel><listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>Programme_Version__c</columns>
        <columns>CASES.REASON</columns>
        <columns>programme_Name__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.EMAIL</columns>
        <columns>Web_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Enquiries</label>
    </listViews><listViews>
        <fullName>Color_Test_View</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.EMAIL</columns>
        <columns>Enquirer__c</columns>
        <columns>NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>Color Test View</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews><listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews><listViews>
        <fullName>PCU_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>PCU Team</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews></CustomObject>